# thesis

./: .gitignore  Dockerfile.base  Dockerfile.buildcross-base  Dockerfile.buildcross-gcc6  README.md
masterproject/code/: .env.example  .gitignore  Makefile  hello.py  pyproject.toml  requirements.txt  start_idun_session.sh  test_installation.py
masterproject/code/dataset/: Andreassen-ISAdetect-features.csv  Andreassen-cpu_rec-features.csv  ISAdetect-features.csv  cpu_rec-features.csv  download_cpu_rec.sh  download_isadetect.sh  generate_filesizes.py  rename_cpu_rec.py  structure.md  unpack_custom_dataset.sh  unzip_ISAdetect.py
masterproject/code/results/: ResNet50-Endianness.csv  ResNet50-InstructionWidthType.csv  ResNet50.csv  ResNet50Embedding-instructionwidthtype.csv  Simple1d.csv  embedding-endianness.csv  endianness.csv  simple-models-instructionwidthtype.csv
masterproject/code/slurm_scripts/: 1d-embedding-endianness.slurm  1d-embedding-instructionwidth-type.slurm  2d-embedding-endianness.slurm  2d-embedding-instructionwidth-type.slurm  all-experiments.slurm  buildcross-all.slurm  combined-all.slurm  cpurec-ISAdetect.slurm  cpurec-all.slurm  cpurec-template.slurm  cpurec_1d_embed_endianness.slurm  cpurec_1d_embed_instructionwidth-type.slurm  cpurec_2d_embedding_endianness.slurm  cpurec_2d_embedding_instructionwidth-type.slurm  isa-classification-all.slurm  job.slurm  kfold-all.slurm  logo-all.slurm  logo-cpurec.slurm  logo-template.slurm  main.slurm  notebook.slurm  resnet-embedding-endianness.slurm  resnet-endianness.slurm  simple-1d-endianess.slurm
masterproject/code/src/: .env.example  cpu_rec_extract_code_sections.py  main.py
masterproject/code/src/analysis/: barchart-buildcross.ipynb  barchart-combined-exclude-overlap.ipynb  barchart-combined.ipynb  barchart-cpurec-exclude-overlap.ipynb  barchart-cpurec.ipynb  barchart-kfold.ipynb  barchart-logo.ipynb  barchart-traintest.ipynb  barchart.ipynb  charts.py  confidence_interval.py  confusion_matrix.ipynb  dataset-isa-overlap.ipynb  dataset-isa-overlap.py  dataset-sizes-statistics.ipynb  isadetect-traintest.py  model_comparison.ipynb  (+1 more)
(+781 files in other folders)
