[project]
name = "code"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikkel Svartveit",email = "mikkel.svartveit@gmail.com"}
]
requires-python = "==3.12.8"
dependencies = ["torch (==2.2.2)", "torchvision (==0.17.2)", "torchaudio (==2.2.2)", "numpy (==1.26.4)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
