[project]
name = "code"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikkel Svartveit",email = "mikkel.svartveit@gmail.com"},
    {name = "Stian Jørstad Sulebak",email = "stianjsu@gmail.com"}
]
requires-python = ">=3.12, <3.13"

dependencies = ["torch (==2.2.2)", "torchvision (==0.17.2)", "torchaudio (==2.2.2)", "numpy (==1.26.4)", "ipykernel (>=6.29.5,<7.0.0)", "jupyter (>=1.1.1,<2.0.0)", "black[jupyter] (>=24.10.0,<25.0.0)", "pandas (>=2.2.3,<3.0.0)", "scikit-learn (>=1.6.1,<2.0.0)", "matplotlib (>=3.10.0,<4.0.0)", "seaborn (>=0.13.2,<0.14.0)", "scipy (>=1.15.1,<2.0.0)", "tqdm (>=4.67.1,<5.0.0)", "wandb (>=0.19.4,<0.20.0)", "python-dotenv (>=1.0.1,<2.0.0)", "matplotlib-venn (>=1.1.2,<2.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = true
packages = [
    { include = "src" }
]
